--- a/UTalk/templates/root.html
+++ b/UTalk/templates/root.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <p>This is a communication space for the students of the UT.</p>
+    <ul>
+        <li><a >Sign up</a></li>
+        <li><a >Log in</a></li>
+        <li><a >Log out</a></li>
+    </ul>
     <script src="../static/js/script.js"></script>
 </body>
 </html>
