--- a/UTalk/templates/root.html
+++ b/UTalk/templates/root.html
@@ -8,10 +8,16 @@
 <body>
     <p>This is a communication space for the students of the UT.</p>
     <ul>
-        <li><a >Sign up</a></li>
-        <li><a >Log in</a></li>
-        <li><a >Log out</a></li>
+        <li><a href='user/signup.html'>Sign up</a></li>
+        <li><a href='user/login.html'>Log in</a></li>
+        <li><a href='user/logout.html'>Log out</a></li>
     </ul>
+    
+    <ul>
+        <li><a href='part-time-job/index.html' >Part-time job info</a></li>
+        <!-->add link to your function here!!<-->
+    </ul>
+    
     <script src="../static/js/script.js"></script>
 </body>
 </html>
